@@ -192,9 +192,9 @@ gdk_pixbuf_render_pixmap_and_mask_for_colormap (pixbuf, colormap, alpha_threshol
         GdkBitmap *bm;
 
         gdk_pixbuf_render_pixmap_and_mask_for_colormap (pixbuf, colormap, &pm, GIMME_V == G_ARRAY ? &bm : 0, alpha_threshold);
-        XPUSHs (newSVGdkPixmap_noinc (pm));
+        XPUSHs (sv_2mortal (newSVGdkPixmap_noinc (pm)));
         if (GIMME_V == G_ARRAY)
-                XPUSHs (newSVGdkBitmap_noinc (bm));
+                XPUSHs (sv_2mortal (newSVGdkBitmap_noinc (bm)));
 }
 
 
@@ -212,9 +212,9 @@ gdk_pixbuf_render_pixmap_and_mask (pixbuf, alpha_threshold)
         GdkBitmap *bm;
 
         gdk_pixbuf_render_pixmap_and_mask (pixbuf, &pm, GIMME_V == G_ARRAY ? &bm : 0, alpha_threshold);
-        XPUSHs (newSVGdkPixmap_noinc (pm));
+        XPUSHs (sv_2mortal (newSVGdkPixmap_noinc (pm)));
         if (GIMME_V == G_ARRAY)
-                XPUSHs (newSVGdkBitmap_noinc (bm));
+                XPUSHs (sv_2mortal (newSVGdkBitmap_noinc (bm)));
 }
 
 =for apidoc get_from_image
